fix: update button border color for improved visibility

--- a/src/styles.css
+++ b/src/styles.css
@@ -757,7 +757,7 @@
 #mlb2-23104662 .ml-mobileButton-horizontal button {
 
   background-color: #151515 !important;
-  border-color: #151515 !important;
+  border-color: #F5F3E7 !important;
   border-style: solid !important;
   border-width: 1px !important;
   border-radius: 4px !important;
